// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Get a free hosted Postgres database in seconds: `npx create-db`

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "sqlite"
}

model CatCategories {
  id                   Int                    @id @default(autoincrement())
  name                 String?
  icon                 String?
  status               Int                    @default(1)
  createdAt            DateTime               @default(now())
  relDesignsCategories RelDesignsCategories[]
}

model CatDesignsType {
  id              Int               @id @default(autoincrement())
  name            String?
  status          Int               @default(1)
  createdAt       DateTime          @default(now())
  relDesignsTypes RelDesignsTypes[]
}

model CatFileExtension {
  id        Int      @id @default(autoincrement())
  name      String?
  extension String?
  mimeType  String?
  status    Int      @default(1)
  createdAt DateTime @default(now())
  files     Files[]
}

model CatFileType {
  id          Int      @id @default(autoincrement())
  name        String?
  description String?
  status      Int      @default(1)
  createdAt   DateTime @default(now())
  files       Files[]
}

model CatMaterials {
  id          Int       @id @default(autoincrement())
  name        String?
  status      Int       @default(1)
  createdAt   DateTime  @default(now())
  slug        String?   @unique
  description String?
  icon        String?
  designs     Designs[]
}

model Designs {
  id                   Int                    @id @default(autoincrement())
  name                 String?
  description          String?
  keywords             String?
  seoDescription       String?
  longDescription      String?
  features             String?
  benefits             String?
  useCases             String?
  audience             String?
  faq                  String?
  imageDescription     String?
  productionTime       String?
  shippingTime         String?
  availability         String?
  dimensions           String?
  notes                String?
  author               String?
  status               Int                    @default(1)
  isTested             Int                    @default(0)
  isCustomizable       Int                    @default(0)
  showInHome           Int                    @default(0)
  showInSite           Int                    @default(0)
  createdAt            DateTime               @default(now())
  materialId           Int?
  numberMdfTables      Int                    @default(0)
  timeMachine          Int                    @default(0)
  suggestedPrice       Float?
  mayoreo              Float?
  minimumPrice         Float?
  material             CatMaterials?          @relation(fields: [materialId], references: [id])
  relDesignsCategories RelDesignsCategories[]
  relDesignsFiles      RelDesignsFiles[]
  relDesignsTypes      RelDesignsTypes[]
}

model SeoWriterProfiles {
  id           Int      @id @default(autoincrement())
  name         String   @unique
  tone         String
  audience     String?
  defaultMode  String   @default("rewrite-soft")
  instructions String
  status       Int      @default(1)
  isDefault    Int      @default(0)
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt
}

model Files {
  id              Int               @id @default(autoincrement())
  fileTypeId      Int?
  fileExtensionId Int?
  filePath        String?
  status          Int               @default(1)
  createdAt       DateTime          @default(now())
  fileType        CatFileType?      @relation(fields: [fileTypeId], references: [id])
  fileExtension   CatFileExtension? @relation(fields: [fileExtensionId], references: [id])
  relDesignsFiles RelDesignsFiles[]
}

model RelDesignsCategories {
  id         Int            @id @default(autoincrement())
  designId   Int?
  categoryId Int?
  status     Int            @default(1)
  createdAt  DateTime       @default(now())
  design     Designs?       @relation(fields: [designId], references: [id])
  category   CatCategories? @relation(fields: [categoryId], references: [id])
}

model RelDesignsFiles {
  id        Int      @id @default(autoincrement())
  designId  Int?
  typeId    Int?
  status    Int      @default(1)
  createdAt DateTime @default(now())
  design    Designs? @relation(fields: [designId], references: [id])
  file      Files?   @relation(fields: [typeId], references: [id])
}

model RelDesignsTypes {
  id         Int             @id @default(autoincrement())
  designId   Int?
  typeId     Int?
  status     Int             @default(1)
  createdAt  DateTime        @default(now())
  design     Designs?        @relation(fields: [designId], references: [id])
  designType CatDesignsType? @relation(fields: [typeId], references: [id])
}

model testimonials {
  id        Int      @id @default(autoincrement())
  name      String
  role      String
  content   String
  product   String
  rating    Int
  status    Int      @default(1)
  createdAt DateTime @default(now())
}

model Faqs {
  id         Int    @id @default(autoincrement())
  question   String @unique
  answer     String
  showInSite Int    @default(1)
  showInMcp  Int    @default(1)
  priority   Int    @default(1)
}
