//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table CatCategories {
  id Int [pk, increment]
  name String
  icon String
  status Int [not null, default: 1]
  createdAt DateTime [default: `now()`, not null]
  relDesignsCategories RelDesignsCategories [not null]
}

Table CatDesignsType {
  id Int [pk, increment]
  name String
  status Int [not null, default: 1]
  createdAt DateTime [default: `now()`, not null]
  relDesignsTypes RelDesignsTypes [not null]
}

Table CatFileExtension {
  id Int [pk, increment]
  name String
  extension String
  mimeType String
  status Int [not null, default: 1]
  createdAt DateTime [default: `now()`, not null]
  files Files [not null]
}

Table CatFileType {
  id Int [pk, increment]
  name String
  description String
  status Int [not null, default: 1]
  createdAt DateTime [default: `now()`, not null]
  files Files [not null]
}

Table CatMaterials {
  id Int [pk, increment]
  name String
  status Int [not null, default: 1]
  createdAt DateTime [default: `now()`, not null]
  slug String [unique]
  description String
  icon String
  designs Designs [not null]
}

Table Designs {
  id Int [pk, increment]
  name String
  description String
  keywords String
  seoDescription String
  longDescription String
  features String
  benefits String
  useCases String
  audience String
  faq String
  imageDescription String
  productionTime String
  shippingTime String
  availability String
  dimensions String
  notes String
  author String
  status Int [not null, default: 1]
  isTested Int [not null, default: 0]
  isCustomizable Int [not null, default: 0]
  showInHome Int [not null, default: 0]
  showInSite Int [not null, default: 0]
  createdAt DateTime [default: `now()`, not null]
  materialId Int
  numberMdfTables Int [not null, default: 0]
  timeMachine Int [not null, default: 0]
  suggestedPrice Float
  mayoreo Float
  minimumPrice Float
  material CatMaterials
  relDesignsCategories RelDesignsCategories [not null]
  relDesignsFiles RelDesignsFiles [not null]
  relDesignsTypes RelDesignsTypes [not null]
}

Table SeoWriterProfiles {
  id Int [pk, increment]
  name String [unique, not null]
  tone String [not null]
  audience String
  defaultMode String [not null, default: 'rewrite-soft']
  instructions String [not null]
  status Int [not null, default: 1]
  isDefault Int [not null, default: 0]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Files {
  id Int [pk, increment]
  fileTypeId Int
  fileExtensionId Int
  filePath String
  status Int [not null, default: 1]
  createdAt DateTime [default: `now()`, not null]
  fileType CatFileType
  fileExtension CatFileExtension
  relDesignsFiles RelDesignsFiles [not null]
}

Table RelDesignsCategories {
  id Int [pk, increment]
  designId Int
  categoryId Int
  status Int [not null, default: 1]
  createdAt DateTime [default: `now()`, not null]
  design Designs
  category CatCategories
}

Table RelDesignsFiles {
  id Int [pk, increment]
  designId Int
  typeId Int
  status Int [not null, default: 1]
  createdAt DateTime [default: `now()`, not null]
  design Designs
  file Files
}

Table RelDesignsTypes {
  id Int [pk, increment]
  designId Int
  typeId Int
  status Int [not null, default: 1]
  createdAt DateTime [default: `now()`, not null]
  design Designs
  designType CatDesignsType
}

Table testimonials {
  id Int [pk, increment]
  name String [not null]
  role String [not null]
  content String [not null]
  product String [not null]
  rating Int [not null]
  status Int [not null, default: 1]
  createdAt DateTime [default: `now()`, not null]
}

Table Faqs {
  id Int [pk, increment]
  question String [unique, not null]
  answer String [not null]
  showInSite Int [not null, default: 1]
  showInMcp Int [not null, default: 1]
  priority Int [not null, default: 1]
}

Ref: Designs.materialId > CatMaterials.id

Ref: Files.fileTypeId > CatFileType.id

Ref: Files.fileExtensionId > CatFileExtension.id

Ref: RelDesignsCategories.designId > Designs.id

Ref: RelDesignsCategories.categoryId > CatCategories.id

Ref: RelDesignsFiles.designId > Designs.id

Ref: RelDesignsFiles.typeId > Files.id

Ref: RelDesignsTypes.designId > Designs.id

Ref: RelDesignsTypes.typeId > CatDesignsType.id